--- a/package.json
+++ b/package.json
@@ -20,14 +20,20 @@
     "@libp2p/mplex": "^11.0.30",
     "@libp2p/noise": "^12.0.1",
     "@libp2p/peer-id": "^5.0.16",
+    "@libp2p/ping": "^2.0.25",
     "@libp2p/pubsub": "^10.1.6",
     "@libp2p/tcp": "^10.1.6",
+    "@libp2p/webrtc": "^5.2.7",
     "@libp2p/websockets": "^9.2.6",
+    "@multiformats/multiaddr": "^12.4.0",
     "@nodeutils/defaults-deep": "^1.1.0",
     "electron": "^34.3.0",
+    "http": "^0.0.1-security",
     "libp2p": "^2.8.0",
+    "localtunnel": "^2.0.2",
     "react-toggle-slider": "^0.4.1",
-    "wait-on": "^8.0.2"
+    "wait-on": "^8.0.2",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@types/node": "^22.13.5",
