--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "http": "^0.0.1-security",
     "libp2p": "^2.8.0",
     "localtunnel": "^2.0.2",
+    "net": "^1.0.2",
     "react-toggle-slider": "^0.4.1",
     "wait-on": "^8.0.2",
     "ws": "^8.18.1"
