--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "@nodeutils/defaults-deep": "^1.1.0",
     "electron": "^34.3.0",
     "http": "^0.0.1-security",
+    "it-byte-stream": "^1.1.1",
     "libp2p": "^2.8.0",
     "localtunnel": "^2.0.2",
     "net": "^1.0.2",
+    "ngrok": "^5.0.0-beta.2",
     "react-toggle-slider": "^0.4.1",
+    "uint8arrays": "^5.1.0",
     "wait-on": "^8.0.2",
     "ws": "^8.18.1"
   },
