changed switchToWebRTC, changed some ui display.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@libp2p/mplex": "^11.0.30",
     "@libp2p/noise": "^12.0.1",
     "@libp2p/peer-id": "^5.0.16",
+    "@libp2p/peer-store": "^11.1.1",
     "@libp2p/ping": "^2.0.25",
     "@libp2p/pubsub": "^10.1.6",
     "@libp2p/tcp": "^10.1.6",
@@ -27,11 +28,16 @@
     "@libp2p/websockets": "^9.2.6",
     "@multiformats/multiaddr": "^12.4.0",
     "@nodeutils/defaults-deep": "^1.1.0",
+    "datastore-level": "^11.0.1",
     "electron": "^34.3.0",
+    "events": "^3.3.0",
     "http": "^0.0.1-security",
+    "interface-datastore": "^8.3.1",
     "it-byte-stream": "^1.1.1",
+    "level": "^9.0.0",
     "libp2p": "^2.8.0",
     "localtunnel": "^2.0.2",
+    "memory-level": "^3.0.0",
     "net": "^1.0.2",
     "ngrok": "^5.0.0-beta.2",
     "react-toggle-slider": "^0.4.1",
