--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "http": "^0.0.1-security",
     "interface-datastore": "^8.3.1",
     "it-byte-stream": "^1.1.1",
+    "it-pipe": "^3.0.1",
     "level": "^9.0.0",
     "libp2p": "^2.8.0",
     "localtunnel": "^2.0.2",
