--- a/electron/turnserver.conf
+++ b/electron/turnserver.conf
@@ -1,21 +1,19 @@
 # General settings
 listening-port=3478
 tls-listening-port=5349
-listening-ip=127.0.0.1
+listening-ip=0.0.0.0
 external-ip=10.76.122.79/195.177.206.66
 min-port=49152
 max-port=65535
 verbose
 
 # Security
-fingerprint
+user=username:password
 lt-cred-mech
-use-auth-secret
-static-auth-secret=vRZRmd2EZQjE22uOd2/v1f21sJzLkEvCjcQfUpHw9tY
 
 # Realm (your domain)
 realm=turn.relay.sadhqwiodnjizux.space
+server-name=your-turn-server
 
-# TLS certificates (we'll generate these later)
-# cert=/usr/local/etc/letsencrypt/live/yourdomain.com/fullchain.pem
-# pkey=/usr/local/etc/letsencrypt/live/yourdomain.com/privkey.pem
+# cert=/etc/letsencrypt/live/turn.relay.sadhqwiodnjizux.space/fullchain.pem
+# pkey=/etc/letsencrypt/live/turn.relay.sadhqwiodnjizux.space/privkey.pem
