--- a/package.json
+++ b/package.json
@@ -6,8 +6,28 @@
   "scripts": {
     "dev": "concurrently \"npm run dev:vite\" \"npm run dev:electron\"",
     "dev:vite": "cd react && npm run dev",
-    "dev:electron": "wait-on http://localhost:5173 && electron electron/main.js"
+    "dev:electron": "wait-on http://localhost:5173 && electron electron/main.js",
+    "build:react": "cd react && npm run build",
+    "build:electron": "electron-builder",
+    "build": "npm run build:react && npm run build:electron"
   },
+  "build": {
+    "appId": "com.tamerugur.tcord",
+    "productName": "Tcord",
+    "directories": {
+      "buildResources": "assets"
+    },
+    "files": [
+      "electron/**/*",
+      "react/dist/**/*",
+      "package.json"
+    ],
+    "win": {
+      "target": "nsis"
+    }
+  },
+  "description": "A libp2p chatElectron app.",
+  "author": "Tamer Ugur <tamerugur3@hotmail.com>",
   "dependencies": {
     "@chainsafe/libp2p-gossipsub": "^14.1.0",
     "@chainsafe/libp2p-noise": "^16.0.3",
@@ -29,7 +49,6 @@
     "@multiformats/multiaddr": "^12.4.0",
     "@nodeutils/defaults-deep": "^1.1.0",
     "datastore-level": "^11.0.1",
-    "electron": "^34.3.0",
     "events": "^3.3.0",
     "http": "^0.0.1-security",
     "interface-datastore": "^8.3.1",
@@ -47,6 +66,7 @@
     "ws": "^8.18.1"
   },
   "devDependencies": {
+    "electron": "^34.3.0",
     "@types/node": "^22.13.5",
     "concurrently": "^9.1.2",
     "electron-builder": "^25.1.8",
